# GDevelop.js

./: .gitignore  .travis.yml  CMakeLists.txt  Changes  Gruntfile.js  Readme.md  WebIDLGrammar.pkl  license.txt  package-lock.json  package.json  update-bindings.js
Bindings/: BehaviorJsImplementation.cpp  BehaviorSharedDataJsImplementation.cpp  Bindings.idl  ObjectJsImplementation.cpp  ObjectJsImplementation.h  ProjectHelper.h  Wrapper.cpp  glue.cpp  glue.js  postjs.js  prejs.js
WebIDE/: main.cpp
WebIDE/Bindings/Extensions/TextObject/: Embind.cpp
WebIDE/Bindings/Extensions/TiledSpriteObject/: Embind.cpp
WebIDE/Bindings/GDCore/: Embind.cpp  Embind.h  Embind2.cpp  Embind2.cpp.old  Embind3.cpp  Embind3.cpp.old  Embind4.cpp  Embind4.cpp.old
WebIDE/Bindings/GDJS/: Embind.cpp  Embind.cpp.old
__tests__/: Core.js  GDJS.js  Serializer.js
examples/: demo.js  simple.js
test/: Core.js  GDJS.js  Serializer.js  Stress.js  Vector.js  libGD_Core.js  libGD_GDJS.js
